[gd_scene load_steps=3 format=2]

[ext_resource path="res://common/world/item_spawner/item_spawner.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 42.0

[node name="ItemSpawner" type="Node2D"]
script = ExtResource( 2 )

[node name="RespawnTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Item" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Item"]
shape = SubResource( 1 )

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
[connection signal="body_entered" from="Item" to="." method="_on_Item_body_entered"]
